added colter May project

--- a/coltermay.com/sass/_about.scss
+++ b/coltermay.com/sass/_about.scss
@@ -4,18 +4,17 @@
 
 .about {
     display: flex;
-    margin-left: 50px;
-    margin-top: 17px;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 100px;
+    // margin-left: 50px;
     // flex-direction: column-reverse; //mobile version
     // flex-direction: row-reverse;
 
     &__text {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
         width: 50%;
-        padding: 40px 40px 20px 40px;
-        line-height: 1.5;
+        padding: 60px 40px 20px 10px;
+        line-height: 1.6;
         font-weight: 200;
         font-size: 1.1em;
         letter-spacing: 1.2px;
@@ -26,44 +25,64 @@
     &__name {
         line-height: 1.2;
         text-transform: uppercase;
-        margin-top: 45px;
-        align-self: right;
+        margin-top: 20px;
         text-align: right;
 
-        & p {    
+        & p {
             letter-spacing: none;
             font-size: .8em;
             letter-spacing: 1.2px;
             font-weight: 400;
         }
-    
-    }
-
- /* ABOUT IMG REVEALING ON SCROLL */
-    &__photo img {
-       @include aboutImgSetings;
-        filter: brightness(.2); 
-        // filter: brightness(1);  // <-- delete this and uncomment the above for revealing effect 
-
 
     }
 
-    &__photo-js img {
-       @include aboutImgSetings;
-        filter:brightness(1);
+    /* ABOUT IMG REVEALING ON SCROLL */
+    &__photo {
+        @include imgSetings;
+        filter: brightness(.2);
+    }
+
+    &__photo-js {
+        @include imgSetings;
+        filter: brightness(1);
+    }
+
+    &__video {
+        margin-top: 100px;
+        position: relative;
+        padding-bottom: 66.25%;
+        height: 0;
+        overflow: hidden;
+
+    }
+
+    &__video iframe {
+        position: absolute;
+        top: 0;
+        left: 10%;
+        width: 80%;
+        height: 70%;
+        opacity: 0.7;
+        transition: 1s;
+
+        &:hover {
+            opacity: 1;
+        }
     }
 }
 
-
+.signature {
+    width: 160px;
+    margin-top: -35px;
+}
 /* **********  TIMELINE VERTICAL RULER ***********/
 .cv {
-    background-image: linear-gradient(rgba($color-black, 1), rgba($color-black-bg, .9)),url(../img/mountain-min.jpg);
-    // background-image: radial-gradient(rgba($color-black, .1), rgba($color-black, .1)),url(../img/mountain-min.jpg);
-    // background-image: radial-gradient(circle, rgba(0, 0, 0, 0.808) 45%, rgb(0, 0, 0) 65%, rgb(0, 0, 0) 85%, rgb(0, 0, 0) 50%, rgb(0, 0, 0) 100%), url(../img/mountain-min.jpg);
-
-    background-size:cover;
+    background-image: radial-gradient(rgba(0, 0, 0, 0.822) 15%, rgb(0, 0, 0) 65%, rgb(0, 0, 0) 85%, rgb(0, 0, 0) 50%, rgb(0, 0, 0) 100%), url(../img/mountain-min.jpg);
+    background-size: cover;
     background-repeat: none;
 }
+
 .timeline {
     position: relative;
     max-width: 1200px;
@@ -79,7 +98,7 @@
         bottom: 0;
         left: 50%;
         margin-left: -3px;
-      }
+    }
 
     & h2 {
         color: $color-primary;
@@ -93,50 +112,50 @@
         color: $color-white;
     }
 
-  }
-    
-  /* CONTAINER AROUND CONTENT */
-  .container {
+}
+
+/* CONTAINER AROUND CONTENT */
+.container {
     padding: 0 40px;
     position: relative;
     padding-bottom: 40px;
     background-color: inherit;
     width: 43.5%;
 
- /* DOTS ON TIMELINE */
+    /* DOTS ON TIMELINE */
     &::after {
-      content: '';
-      position: absolute;
-      width: 15px;
-      height: 15px;
-      right: -5px;
-      background-color: $color-primary;
-      border: 2px solid $color-primary;
-      top: 20px;
-      border-radius: 50%;
-      z-index: 1;
+        content: '';
+        position: absolute;
+        width: 15px;
+        height: 15px;
+        right: -5px;
+        background-color: $color-primary;
+        border: 2px solid $color-primary;
+        top: 20px;
+        border-radius: 50%;
+        z-index: 1;
 
     }
-  }
-  
-  /* PLACE CONTAINER TO THE LEFT */
-  .left {
+}
+
+/* PLACE CONTAINER TO THE LEFT */
+.left {
     left: 0;
-  }
-  
-  /* PLACE CONTAINER TO THE right */
-  .right {
+    width: 50%;
+}
+
+/* PLACE CONTAINER TO THE right */
+.right {
     left: 49.7%;
-  }
-  
-  
-  /* FIX DOT ON THE RIGHT SIDE*/
-  .right::after {
+}
+
+/* FIX DOT ON THE RIGHT SIDE*/
+.right::after {
     left: -7px;
-  }
-  
-  /* CONTENT */
-  .content {
+}
+
+/* CONTENT */
+.content {
     padding: 20px 30px;
     // background-color: $color-white; //for mobile version 
     position: relative;
@@ -148,15 +167,14 @@
         margin: 5px 0 0 20px;
     }
 
-    & li:not(:last-child){
+    & li:not(:last-child) {
         margin-bottom: 5px;
+    }
 
-    }
-        
-    }
+}
 
 .mentors__box {
-    margin-left: 55px;
+    margin-left: 43px;
     margin-top: 80px;
     // overflow: hidden;
 
@@ -164,9 +182,66 @@
         color: $color-white;
     }
 }
+
 .mentor {
-    color:$color-primary;
+    color: $color-primary;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 1px;
+}
+
+
+/* **********  ARTIST STATEMENT ***********/
+.statement__box {
+    margin-top: -150px;
+    padding-bottom: 100px;
+}
+.artist__statement {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: flex-end;
+}
+
+.statement__img {
+ @include statementImg;
+    filter: brightness(.2);
+}
+
+.js-statement__img {
+    @include statementImg;
+    filter: brightness(1);
+}
+
+.statement {
+    &__text {
+        width: 60%;
+        padding: 10px 0 0 0px;
+        margin-left: 250px;
+        line-height: 1.6;
+        font-weight: 200;
+        font-size: 1.1em;
+        letter-spacing: 1.2px;
+        color: $color-grey-light;
+    }
+    &__text:first-child::first-letter {
+        color: $color-primary;
+        font-size: 2em;
+        font-weight: 500;
+        line-height: 1;
+    }
+}
+
+.blockquote {
+    line-height: 1.6;
+    position: relative;
+
+    &::before {
+        content: "\201c";
+        font-size: 550%;
+        display: block;
+        position: absolute;
+        top: -20%;
+        left: -6%;
+    }
+
 }
