--- a/coltermay.com/sass/_variables.scss
+++ b/coltermay.com/sass/_variables.scss
@@ -1,11 +1,15 @@
-$color-primary: #e2ca7b;
+$color-primary: #ffd880;
 $color-primary-light: #ecd99f;
 $color-white: #fff;
+$color-white2: #f6f5ee;
 $color-grey-light: #a6a6a6;
 $color-grey-dark: #5b5b5b;
 $color-grey-darker: #333333;
+$color-green-light: #18da58;
 
 $color-black-bg: rgba(14, 4, 4, 0.699);
+$color-black-bg2: rgba(10, 2, 2, 0.924);
+
 $color-black: #000000;
 
 // #f3dba3
