--- a/coltermay.com/sass/_slider.scss
+++ b/coltermay.com/sass/_slider.scss
@@ -49,27 +49,27 @@
     }
 
 
-
-    &:first-child {
+    // ========== HOME PAGE SILDER PICTURES ==========
+    &:first-child {     //picture 1
         background: url(../img/EasterSunrise-min.jpg) no-repeat center center/cover;
     }
 
-    &:nth-child(2) {
+    &:nth-child(2) {    //picture 2
         background: url(../img/EasterSunset-min.JPEG) no-repeat center center/cover;
 
     }
 
-    &:nth-child(3) {
+    &:nth-child(3) {    //picture 3
         background: url(../img/TheTowers-min.jpg) no-repeat center center/cover;
 
     }
 
-    &:nth-child(4) {
+    &:nth-child(4) {    //picture 4
         background: url(../img/ChasingDusk-min.jpg) no-repeat center center/cover;
 
     }
 
-    &:nth-child(5) {
+    &:nth-child(5) {    //picture 5
         background: url(../img/img5.jpg) no-repeat center center/cover;
 
     }
