--- a/coltermay.com/sass/_typography.scss
+++ b/coltermay.com/sass/_typography.scss
@@ -1,33 +1,32 @@
 .heading__secondary {
-    position: relative;
-    // display: inline-block;
+    position: absolute;
     text-transform: uppercase;
     color: $color-primary;
     font-size: 2.2em;
     font-weight: 400;
     letter-spacing: 3px;
-    padding: 70px 0 30px 88px;
+    padding: 0px 0 30px 67px;
 
     &:before {
         content: attr(data-text);
-        position: absolute;
-        top: 48%;
-        left: 2.4%;
-        font-size: 1.1em;
+        position: relative;
+        top: 0;
+        left: 0.6%;
+        // font-size: 1.06em;
         color: darken($color-grey-darker, 10% );
         pointer-events: none;
 
     }
 
-    &:after {
-        position: absolute;
-        content:"";
-        top: 87%;
-        left: 6%;
-        width: 3%;
-        height: 2px;
-        background-color:$color-white;
-    }
+    // &:after {
+    //     position: absolute;
+    //     content:"";
+    //     top: 70%;
+    //     left: 9%;
+    //     width: 3%;
+    //     height: 2px;
+    //     background-color:$color-white2;
+    // }
 }
 
 .heading__terceary {
@@ -39,11 +38,3 @@
 
 }
 
-// .heading__terceary {
-//     font-size: 1.5em;
-//     color: $color-white;
-//     font-weight: 400;
-//     text-transform: uppercase;
-//     letter-spacing: 1.8px;
-//     margin-bottom: 8px;
-// }
